; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/xen/extr_enlighten.c_xen_write_cr4.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/xen/extr_enlighten.c_xen_write_cr4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@X86_CR4_PGE = common dso_local global i64 0, align 8
@X86_CR4_PSE = common dso_local global i64 0, align 8
@X86_CR4_OSXSAVE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @xen_write_cr4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xen_write_cr4(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* @X86_CR4_PGE, align 8
  %4 = xor i64 %3, -1
  %5 = load i64, i64* %2, align 8
  %6 = and i64 %5, %4
  store i64 %6, i64* %2, align 8
  %7 = load i64, i64* @X86_CR4_PSE, align 8
  %8 = xor i64 %7, -1
  %9 = load i64, i64* %2, align 8
  %10 = and i64 %9, %8
  store i64 %10, i64* %2, align 8
  %11 = load i64, i64* @X86_CR4_OSXSAVE, align 8
  %12 = xor i64 %11, -1
  %13 = load i64, i64* %2, align 8
  %14 = and i64 %13, %12
  store i64 %14, i64* %2, align 8
  %15 = load i64, i64* %2, align 8
  %16 = call i32 @native_write_cr4(i64 %15)
  ret void
}

declare dso_local i32 @native_write_cr4(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
